--- a/src/_html-original/google_api/index.html
+++ b/src/_html-original/google_api/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>CSS animation</title>
+  <title>Google APIs</title>
   <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -59,44 +59,39 @@
     <div class="l-contents">
       <main class="l-main">
         <div class="subPage__inner">
-          <h2 class="subPage__title">CSSアニメーション</h2>
+          <h2 class="subPage__title">Google API</h2>
           <ul class="subPage__menu">
             <li class="menu__item">
-              <a href="#">ボタン</a>
-            </li>
-            <li class="menu__item">
-              <a href="#">グラデーション</a>
-            </li>
-            <li class="menu__item">
-              <a href="#">ボーダー</a>
-            </li>
-            <li class="menu__item">
-              <a href="#">SVG</a>
+              <a href="#">マップ</a>
             </li>
           </ul>
 
           <section class="subPage__sec">
-            <h3 class="sec__title">ボタン</h3>
+            <h3 class="sec__title">マップ</h3>
             <ul class="sec__list">
               <li class="sec__listItem">
-                <h4 class="listItem__title">ふんわり系01</h4>
+                <h4 class="listItem__title">シンプル系</h4>
                 <div class="listItem__result">
-                  <div class="button">
-                    <a class="c-btn example01" href="#">ほわーん</a>
+                  <div id="map" class="googleMaps"></div>
+                  <div class="googleMaps__link">
+                    <div class="googleMaps__linkToPage">
+                      <i class="fa fa-external-link"></i><a href="https://goo.gl/maps/qKcHFWKzvUC2" target="_blank">大きな地図で見る</a>
+                    </div>
+                    <div class="googleMaps__linkToApp SPview">
+                      <i class="fa fa-external-link"></i><a href="http://maps.google.com/maps?q=渋谷キャスト" target="_blank">アプリで地図を見る</a>
+                    </div>
                   </div>
                 </div>
                 <div class="listItem__point">
                   <h4 class="point__title">ポイント</h4>
                   <ul class="point__list">
                     <li class="point__listItem">
-                      <p>widthとheightが固定値でないと、IEでうまく動かない模様<br>
-                        （比率を維持するために<span class="codeQuote__short">padding-top: 100%;</span>などを指定した場合）
-                      </p>
+                      <p>時間かけない</p>
                     </li>
                   </ul>
                 </div>
                 <div class="listItem__link">
-                  <a href="https://codepen.io/nyoon/pen/NgvdoM" target="_blank">コード</a>
+                  <a href="https://codepen.io/nyoon/pen/awyWVG" target="_blank">コード</a>
                 </div>
                 <!-- <div class="listItem__reference">
                   <div class="reference__title">参考サイト</div>
@@ -106,42 +101,6 @@
                     </li>
                   </ul>
                 </div> -->
-              </li>
-            </ul>
-          </section>
-
-          <section class="subPage__sec">
-            <h3 class="sec__title">グラデーション</h3>
-            <ul class="sec__list">
-              <li class="sec__listItem">
-                <h4 class="listItem__title">ふんわり系01</h4>
-                <div class="listItem__result">
-                  <div class="gradation">
-                    さんさんとしております
-                  </div>
-                </div>
-                <div class="listItem__point">
-                  <h4 class="point__title">ポイント</h4>
-                  <ul class="point__list">
-                    <li class="point__listItem">
-                      <p>色がどぎつくならないように</p>
-                    </li>
-                  </ul>
-                </div>
-                <div class="listItem__link">
-                  <a href="https://codepen.io/nyoon/pen/XgaMrr" target="_blank">コード</a>
-                </div>
-                <div class="listItem__reference">
-                  <div class="reference__title">参考サイト</div>
-                  <ul class="reference__list">
-                    <li class="reference__listItem">
-                      <a href="https://www.gradient-animator.com/" target="_blank">CSS GRADIENT ANIMATOR</a>
-                    </li>
-                    <li class="reference__listItem">
-                      <a href="http://weblifetimes.com/css-gradietion-animetion/" target="_blank">CSSで背景グラデーション+アニメーションで変化する背景色を実装してみよう！</a>
-                    </li>
-                  </ul>
-                </div>
               </li>
             </ul>
           </section>
