--- a/src/_html-original/index.html
+++ b/src/_html-original/index.html
@@ -60,11 +60,19 @@
       <main class="l-main">
         <div class="index__inner">
           <ul class="index__list">
-            <li class="index__listItem">
+            <li class="index__listItem cssAnimation">
               <a href="/css_animation/">
                 <h3 class="listItem__title">CSS animation</h3>
                 <div class="listItem__image">
-                  <img src="/img/index/CSS3_Logo.svg" width="350" height="150" alt="CSS3_Logo">
+                  <img src="/img/index/CSS3_Logo.svg" width="150" height="150" alt="CSS3_Logo">
+                </div>
+              </a>
+            </li>
+            <li class="index__listItem googleAPI">
+              <a href="/google_api/">
+                <h3 class="listItem__title">Google API</h3>
+                <div class="listItem__image">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" width="200" height="150" alt="Google_2015_logo">
                 </div>
               </a>
             </li>
@@ -94,6 +102,8 @@
 <script type="text/javascript" src="/js/vendor/jquery-scrollpanel-0.7.0.min.js"></script>
 <script src="/js/vendor/jquery.matchHeight-min.js"></script>
 <script src="/js/common.js"></script>
+<script src="/js/map.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfA9UyN24AWaATnDcxoRosNo7SxbqnStI&callback=initMap"></script>
 
 </body>
 
