--- a/src/_html-original/php/form/exam01.html
+++ b/src/_html-original/php/form/exam01.html
@@ -230,6 +230,8 @@
 <script type="text/javascript" src="/js/vendor/jquery-scrollpanel-0.7.0.min.js"></script>
 <script src="/js/vendor/jquery.matchHeight-min.js"></script>
 <script src="/js/common.js"></script>
+<script src="/js/map.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfA9UyN24AWaATnDcxoRosNo7SxbqnStI&callback=initMap"></script>
 
   <script type="text/javascript" src="/js/vendor/jquery.mousewheel.js"></script>
 </body>
